syntax = "proto3";


option java_multiple_files = true;
option java_package = "AverageValue";
option java_outer_classname = "AverageValueImpl";

package AverageValueImpl;

// Interface exported by the server.
service AverageValue {

  rpc Average(stream AverageRequest) returns (AverageResponse) {}

}
message AverageRequest {
	int32 request = 1;
}

message AverageResponse {
	float response  = 1;
}

